objects/Survey_Results__c.object
<CustomObject>
    <label>Survey Result</label>
    <nameField>
        <label>Survey Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>Customer Sat</fullName>
                </value>
                <value>
                    <fullName>Cancellation Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q_CF_Additional_Comment__c</fullName>
        <inlineHelpText>Is there anything else you would like to share with us? at the end of the survey</inlineHelpText>
        <label>Q-CF Additional Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q_CF_Moving_to_Solution__c</fullName>
        <inlineHelpText>What tools will you be moving to?</inlineHelpText>
        <label>Q-CF Moving to Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q_CF_Trying_to_Accomplish__c</fullName>
        <inlineHelpText>What best describes what you were trying to accomplish with productboard?</inlineHelpText>
        <label>Q-CF Trying to Accomplish</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collect Feedback</fullName>
                </value>
                <value>
                    <fullName>Prioritize what to build</fullName>
                </value>
                <value>
                    <fullName>Align around roadmap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_CF_Missing_Functionality__c</fullName>
        <inlineHelpText>What product functionality was missing?</inlineHelpText>
        <label>Q-CF Missing Functionality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q_CF_Do_Business_In_the_Future__c</fullName>
        <inlineHelpText>Is there a possibility of doing business together in the future?</inlineHelpText>
        <label>Q-CF Do Business In the Future?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_CF_Why_pb_not_right_solution__c</fullName>
        <inlineHelpText>Why do you feel productboard isn&apos;t the right solution to accomplish this? (select all that apply)</inlineHelpText>
        <label>Q-CF Why pb not right solution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pb too complex</fullName>
                </value>
                <value>
                    <fullName>not using</fullName>
                </value>
                <value>
                    <fullName>missing features</fullName>
                </value>
                <value>
                    <fullName>budget cut</fullName>
                </value>
                <value>
                    <fullName>price too high</fullName>
                </value>
                <value>
                    <fullName>performance issues</fullName>
                </value>
                <value>
                    <fullName>no longer need pm system</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Completed_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Project__c</columns>
        <columns>Q_CF_Additional_Comment__c</columns>
        <columns>Q_CF_Do_Business_In_the_Future__c</columns>
        <columns>Q_CF_Missing_Functionality__c</columns>
        <columns>Q_CF_Moving_to_Solution__c</columns>
        <columns>Q_CF_Trying_to_Accomplish__c</columns>
        <columns>Q_CF_Why_pb_not_right_solution__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>